# ufrgs-instrumentacao-projeto

./: .gitignore  Cronograma.xlsx  README.md
Relatório/: .gitignore  Anteprojeto.tex  Proposta.tex  Relatório.tex  instrumentacao.cls
Relatório/old/: instrumentacao.cls
Resources/Excel/: Medidas Iniciais.xlsx
Resources/Images/: Figuras.pptx
Resources/Mathematica/: Condicionador Pt100.nb  Nivel.nb  NivelExperimental.nb  Temperatura.nb  ponte.nb
Resources/Proteus/: Backup Of Hall.pdsbak  Backup Of Sensor de Nivel.pdsbak  Backup Of Termometro.pdsbak  Hall.pdsprj  Hall.pdsprj.ROGIELSULZBFCD3.Rogiel.workspace  Last Loaded Sensor de Nivel.pdsbak  Last Loaded Termometro.pdsbak  Sensor de Nivel.EDF  Sensor de Nivel.pdsprj  Sensor de Nivel.pdsprj.ROGIELSULZB259A.Rogiel.workspace  Sensor de Nivel.pdsprj.ROGIELSULZBFCD3.Rogiel.workspace  Sensor de Nivel.pdsprj.Rogiels-MBP.Rogiel.workspace  Termometro.EDF  (+6 more)
Software/: CMakeLists.txt
Software/IHM-Nível/IHM-Nível/: AppDelegate.h  AppDelegate.mm  Info.plist  ViewController.h  ViewController.mm  main.m
Software/IHM-Nível/IHM-Nível.xcodeproj/: project.pbxproj
Software/IHM-Nível/IHM-Nível.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Software/IHM-Nível/IHM-Nível.xcodeproj/project.xcworkspace/xcuserdata/Rogiel.xcuserdatad/: UserInterfaceState.xcuserstate
Software/IHM-Nível/IHM-Nível.xcodeproj/xcuserdata/Rogiel.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Software/IHM-Nível/IHM-Nível.xcodeproj/xcuserdata/Rogiel.xcuserdatad/xcschemes/: IHM-Nível.xcscheme  xcschememanagement.plist
Software/IHM-Nível/IHM-Nível/Base.lproj/: Main.storyboard
Software/MSP430/: CMakeLists.txt
Software/MSP430/Source/: main.cpp  uart.c  uart.h
Software/MSP430/cmake/: msp430.cmake
Software/Protocol/: packet.h
Software/Source/: main.cpp
Software/cmake/: msp430.cmake
(+16 files in other folders)
